docs: add graz-transit project to README

--- a/README.org
+++ b/README.org
@@ -10,3 +10,6 @@ Repo to play with [[https://github.com/badlogic/pi-mono][pi]] and [[https://gith
 
 *** [[file:dockerize][dockerize]]
 Dockerfiles and scripts to containerize the =pi= coding agent.
+
+*** [[https://github.com/bot2904/graz-transit][graz-transit]]
+Graz public transport departure times and route planning.
