--- a/README.org
+++ b/README.org
@@ -1,20 +1,15 @@
-* pi-experiments
+* dockerized-pi
 
-#+BEGIN_QUOTE
-:warning: *This repo is not safe.*
-#+END_QUOTE
+"There are many coding agents dockerizations, but this one is mine."
 
-Repo to play with [[https://github.com/badlogic/pi-mono][pi]] and [[https://github.com/badlogic/pi-mono/tree/main/packages/coding-agent][pi-coding-agent]].
+Dockerfiles and scripts to containerize the [[https://github.com/badlogic/pi-mono][pi]] coding agent.
+Includes various helpers and opinionated customizations.
 
 -----
 
-** Projects
+** Setup & Usage
 
-*** [[file:dockerize][dockerize]]
-Dockerfiles and scripts to containerize the =pi= coding agent.
-Includes various helpers and opinionated customizations.
-
-**** Environment Variables
+*** Environment Variables
 The following environment variables can be configured in =dockerize/.env= (see =dockerize/.env.template=):
 - =BOT_GH_TOKEN=: GitHub personal access token (for =gh= CLI authentication).
 - =BOT_SENTRY_TOKEN=: Sentry auth token (for =sentry-cli= authentication). Get one at [[https://turing-6b.sentry.io/settings/account/api/auth-tokens/][Sentry Personal Tokens]].
@@ -25,7 +20,7 @@ The following environment variables can be configured in =dockerize/.env= (see =
 - =GOOGLE_GENERATIVE_AI_API_KEY=: Google Generative AI API key (Gemini).
 - =PI_CACHE_RETENTION=: Cache retention period (e.g., =7d=).
 
-**** Helper Commands
+*** Helper Commands
 - =./build.sh=: Build the docker image (optionally pass a version like =./build.sh 1.0.0=).
 - =./pi.sh --install=: Install =pi=, =pic=, and =picommit= aliases in =~/.zshrc.local=.
 - =./pi.sh --update=: Update the agent to the latest version and rebuild the docker image.
@@ -34,7 +29,7 @@ The following environment variables can be configured in =dockerize/.env= (see =
 - =./pi.sh --ro= or =--readonly=: Mount the workspace in read-only mode.
 - =./pi.sh <args>=: Run =pi= with the given arguments inside the container.
 
-**** Pi Alias Commands
+*** Pi Alias Commands
 Install using =./pi.sh --install=.
 - =pi=: Run the agent in the current directory.
 - =pic=: Continue the last session (=pi --continue=).
@@ -42,25 +37,20 @@ Install using =./pi.sh --install=.
 
 -----
 
-**** Prompt Templates
+** Features
+
+*** Prompt Templates
 - =/commit=: Automatically stage and commit changes with conventional commit messages.
 
-**** Extensions
+*** Extensions
 - =/quota-antigravity=: Show Antigravity usage limits and quotas.
 - =/quota-copilot=: Show GitHub Copilot usage statistics and quotas.
 - =/files-changed=: Show a list of files read, written, or edited in the current session.
 
-**** Skills
+*** Skills
 - =git-autopep8=: Automatically formats changed lines in Python files using =git= and =autopep8=.
 
-**** Tools (Custom)
+*** Tools (Custom)
 - =get_antigravity_quota=: Fetch Antigravity usage limits (available to the model).
 - =get_copilot_quota=: Fetch GitHub Copilot usage limits (available to the model).
 - =get_files_changed=: List files touched in the session (available to the model).
-
------
-
-** Pi-generated experiments
-
-*** [[https://github.com/bot2904/graz-transit][graz-transit]]
-Graz public transport departure times and route planning.
