--- a/examples.org
+++ b/examples.org
@@ -1,9 +1,9 @@
-** Examples
+* Examples
 
-*** [[https://github.com/bot2904/graz-transit][graz-transit]]
+** [[https://github.com/bot2904/graz-transit][graz-transit]]
 A demo showing Graz public transport departure times and route planning.
 
-*** [[https://github.com/bot2904/org-vs-orgdown-demo][org-vs-orgdown-demo]]
+** [[https://github.com/bot2904/orgdown-vs-markdown][orgdown-vs-markdown]]
 A live demonstration comparing Markdown and Orgdown syntax, autonomously synthesized by the pi coding agent during the STG LLM Meetup in Graz.
 
 ** About the bot2904 Account
